[tool.enscons]
name = "libsourcemap"
version = "0.5.0"
description = "Helps working with sourcemaps."
classifiers = ["Intended Audience :: Developers", "License :: OSI Approved :: BSD License", "Operating System :: OS Independent", "Programming Language :: Python", "Topic :: Internet :: WWW/HTTP :: Dynamic Content", "Topic :: Software Development :: Libraries :: Python Modules"]
author = "Sentry"
author_email = "hello@getsentry.com"
url = "http://github.com/getsentry/libsourcemap"
license = "BSD"
install_requires = ["cffi>=1.6.0"]
packages = ["libsourcemap"]
src_root = ""

[build-system]
requires = ["pytoml>=0.1", "enscons"]
